6990933: assert(sender_cb) failed: sanity in frame::sender_for_interpreter_frame

Reviewed-by: never